documenting the apis of the article controller methods:
